# claude-colab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  build.py  claude_code_colab_DEBUG.ipynb  claude_code_colab_bootstrap.ipynb  pyproject.toml  pytest.ini  update_docs.py
.beads/: deletions.jsonl  issues.jsonl
.claude-plugin/: marketplace.json
.cursor/plans/: optimize_ci_docker_6ea26bc2.plan.md
.github/workflows/: ci.yml  release.yml
scripts/: install-hooks.sh
scripts/hooks/: README.md  pre-commit
src/: bootstrap_template.ipynb  docs_manifest.json  guide.md
src/agents/: colab.md  notebook-doctor.md
src/cached_docs/: auth.md  cli-reference.md  hooks.md  overview.md  plugins-reference.md  settings.md  slash-commands.md  statusline.md
src/hooks/: markdown_formatter.py  statusline.py
src/plugin/.claude-plugin/: plugin.json
src/plugin/agents/: notebook-doctor.md
src/plugin/commands/: checkpoint.md  colab-status.md  colab-update.md
src/plugin/hooks/: hooks.json
src/plugin/scripts/: markdown_formatter.py  safety_check.py  session_start.py  statusline.py
src/plugin/skills/claude-expert/: SKILL.md
src/plugin/skills/customize/: SKILL.md
src/plugin/skills/docs-updater/: SKILL.md
src/plugin/skills/skill-builder/: SKILL.md
src/skills/: claude-expert.md  customize.md  docs-updater.md  ipynb.md  skill-builder.md
tests/: .dockerignore  Dockerfile.test  EXECUTION_TESTING.md  README.md  __init__.py  test_notebook.py  test_notebook_execution.py
