[project]
name = "claude-code-colab-bootstrap"
version = "0.1.2"
description = "Self-bootstrapping notebook that installs Claude Code in Google Colab"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Claude Code Colab Bootstrap Contributors"}
]
license = {text = "MIT"}
keywords = ["claude-code", "colab", "jupyter", "notebook", "bootstrap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
# This is a build tool, not a package - no need to build wheels

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = ["*.ipynb"]  # Notebooks are JSON with embedded Python, not pure Python files

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E402", "F821", "W291", "W293"]  # E402/F821: notebooks/templates, W291/W293: whitespace in notebooks

[tool.ruff.format]
# Ruff formatter configuration (replaces black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
exclude = ["*.ipynb"]  # Notebooks are JSON, not Python
